...

            Slider(
                value = mode.toFloat(), onValueChange = { mode = it.toInt() },
                enabled = true,
                valueRange = 0f..1f,
                steps = 1,
                modifier = Modifier.semantics { contentDescription = "対戦形式のスライダー" }
            )
        }

        Row(
            modifier = Modifier
                .fillMaxWidth()
...
            Slider(
                value = count.toFloat(), onValueChange = { count = it.toInt() },
                valueRange = 1f..10f,
                enabled = true,
                steps = 9,
                modifier = Modifier.weight(3.3f, false)
                    .semantics { contentDescription = "回数のスライダー" }
            )

            Text(
                text = stringResource(id = R.string.round1, count),
                fontSize = 27.sp,
                modifier = Modifier.weight(1.7f, false),
...
