...
                countApp.clearTotalResult()
                clearWin = 0
                clearLose = 0
                clearDraw = 0
            },
            shape = MaterialTheme.shapes.small,
            modifier = Modifier.semantics { contentDescription = "勝敗数のリセットボタン" }
        ) {
            Text(text = stringResource(R.string.reset), fontSize = 36.sp)
        }
    }
}
